new pages added

--- a/about_us.html
+++ b/about_us.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="bg_img-s font_family_roboto-s">
-    <!-- .................Home Page Start ......................... -->
+    <!-- .................about us Start ......................... -->
     <div class="container-fluid px-0 mx-0 ">
         <!-- .................Home Page NavBar Start ......................... -->
 
@@ -103,7 +103,7 @@
         <!-- .................Home Page NavBar End ......................... -->
 
 
-        <!-- container for favorite players - start -->
+        <!-- container for about us - start -->
         <div class="container-fluid bg-white br_47px-s mh_86vh-s">
             <div class="row pt-5 px-xl-4">
                 <div class="col-md-6 col-12">
@@ -147,9 +147,9 @@
             </div>
 
         </div>
-        <!-- container for favorite players - end -->
+        <!-- container for about us - end -->
     </div>
-    <!-- .................Home Page End ......................... -->
+    <!-- .................about us End ......................... -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="assets/js/main.js"></script>
