--- a/more.html
+++ b/more.html
@@ -271,6 +271,18 @@
                         </div>
                     </a>
                 </div>
+                <div class=" col-12 my-3">
+                    <a class="td_none-s" href="payment.html">
+                        <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between">
+                            <div class="align-self-center">
+                                <h6 class="mb-0"><strong>Payment</strong></h6>
+                            </div>
+                            <div class="align-self-center">
+                                <img src="assets/images/arrow_black.svg" alt="">
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
         <!-- container for favorite players - end -->
@@ -360,16 +372,16 @@
                             <form action="">
                                 <div class="d-flex text-center py-4 justify-content-between">
                                     <div class=" p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong><input type="number" class="code_input-s" name="code"> </strong></span>
                                     </div>
                                     <div class="  p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong><input type="number" class="code_input-s" name="code"> </strong></span>
                                     </div>
                                     <div class=" p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong><input type="number" class="code_input-s" name="code"> </strong></span>
                                     </div>
                                     <div class=" p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong><input type="number" class="code_input-s" name="code"> </strong></span>
                                     </div>
                                 </div>
                             </form>
@@ -573,16 +585,16 @@
                             <form action="">
                                 <div class="d-flex text-center py-4 justify-content-between">
                                     <div class=" p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong><input type="number" class="code_input-s" name="code"> </strong></span>
                                     </div>
                                     <div class="  p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong><input type="number" class="code_input-s" name="code"> </strong></span>
                                     </div>
                                     <div class=" p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong><input type="number" class="code_input-s" name="code"> </strong></span>
                                     </div>
                                     <div class=" p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong><input type="number" class="code_input-s" name="code"> </strong></span>
                                     </div>
                                 </div>
                             </form>
@@ -730,7 +742,7 @@
                         <div class="col-12 px-4">
                             <form action="">
                                 <div class="form-group pt-3">
-                                    <label for="email-d" class=""><strong>EMAIl</strong></label>
+                                    <label for="email-d" class=""><strong>EMAIL</strong></label>
                                     <input type="email" name="email" placeholder="Enter your email" id="email-d" class="form-control rounded form-control-xl py-4 email-t">
                                 </div>
                             </form>
@@ -784,16 +796,16 @@
                             <form action="">
                                 <div class="d-flex text-center py-4 justify-content-between">
                                     <div class=" p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong> <input type="number" class="code_input-s" id="code" name="code"></strong></span>
                                     </div>
                                     <div class="  p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong><input type="number" class="code_input-s" name="code"> </strong></span>
                                     </div>
                                     <div class=" p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong><input type="number" class="code_input-s" name="code"> </strong></span>
                                     </div>
                                     <div class=" p-3 code_border-s">
-                                        <span class="fs_30px-s"><strong>4</strong></span>
+                                        <span class="fs_30px-s"><strong><input type="number" class="code_input-s" name="code"> </strong></span>
                                     </div>
                                 </div>
                             </form>
