--- a/term_and_condition.html
+++ b/term_and_condition.html
@@ -103,7 +103,7 @@
     <!-- .................Home Page NavBar End ......................... -->
 
 
-    <!-- container for favorite players - start -->
+    <!-- container for terms and condition - start -->
     <div class="container-fluid bg-white br_47px-s mh_86vh-s">
         <div class="row pt-5 px-xl-4">
             <div class="col-12 mt-3 d-flex fg_green-s">
@@ -147,7 +147,7 @@
             </div>
         </div>
     </footer>
-    <!-- container for favorite players - end -->
+    <!-- container for terms and condition - end -->
 
     <!-- </div> -->
     <!-- .................Home Page End ......................... -->
