--- a/game_invitation.html
+++ b/game_invitation.html
@@ -13,16 +13,16 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' />
 
     <!-- <link rel="shortcut icon" type="image/x-icon" href="demo/img/pignose-ico.ico" /> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.13.0/themes/prism.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.13.0/themes/prism.min.css"> -->
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/components/icon.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/components/icon.min.css"> -->
 
 
     <link rel="stylesheet" href="assets/css/pignose.calendar.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/ui.css" />
+    <!-- <link rel="stylesheet" href="assets/css/mina.css" /> -->
     <link rel="stylesheet" href="assets/css/main.css" />
 
 
