complete rating screens

--- a/index.html
+++ b/index.html
@@ -752,9 +752,12 @@
                     <form action="">
                         <div class="row pt-3 pb-5">
                             <div class="col-12">
-                                <div class="price-field ">
-                                    <input type="range" min="100" max="500" value="100" name="foo" id="lower">
-                                    <input type="range" min="100" max="500" value="500" id="upper">
+                                <div class="price-field">
+                                    <div class="range-value min_value-d"></div>
+                                    <input id="" class="min_input-d" type="range" min="0.0" max="5.0" value="0.0" step="0.1">
+
+                                    <div class="range-value max_value-d"></div>
+                                    <input id="" class="max_input-d" type="range" min="0.0" max="5.0" value="5.0" step="0.1">
                                 </div>
                             </div>
                         </div>
@@ -786,10 +789,11 @@
                     <form action="">
                         <div class="row pt-3 pb-5">
                             <div class="col-12">
-
                                 <div class="price-field ">
-                                    <input type="range" min="100" max="500" value="100" name="foo" id="lower">
-                                    <input type="range" min="100" max="500" value="500" id="upper">
+                                    <div class="range-value min_value-d"></div>
+                                    <input id="" class="min_input-d" type="range" min="10" max="50" value="0" step="1">
+                                    <div class="range-value max_value-d"></div>
+                                    <input id="" class="max_input-d" type="range" min="10" max="50" value="50" step="1">
                                 </div>
                             </div>
                         </div>
@@ -824,8 +828,10 @@
                                 <div class="row pt-3 pb-5">
                                     <div class="col-12">
                                         <div class="price-field ">
-                                            <input type="range" min="100" max="500" value="100" name="foo" id="lower">
-                                            <input type="range" min="100" max="500" value="500" id="upper">
+                                            <div class="range-value min_value-d"></div>
+                                            <input id="" class="min_input-d" type="range" min="1" max="5" value="1.0" step="0.1">
+                                            <div class="range-value max_value-d"></div>
+                                            <input id="" class="max_input-d" type="range" min="1" max="5" value="5.0" step="0.1">
                                         </div>
                                     </div>
                                 </div>
