--- a/pay_now.html
+++ b/pay_now.html
@@ -117,7 +117,7 @@
                         <div class="card-body pt-2 pb-3 px-1">
                             <div class="container-fluid px-xl-0">
                                 <div class="row px-xl-4">
-                                    <div class="col-xl-2 col-3">
+                                    <div class="col-xl-1 col-md-2 col-3">
                                         <img src="assets/images/Group 24.png" alt="">
                                     </div>
                                     <div class="col-xl-10 col-9 ">
@@ -156,12 +156,6 @@
                                     <span class="fs_12px-s">Jaber Al-Ahmad International Stadium</span>
                                 </h6>
                                 <span class="opacity_4-s fs_11px-s">Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
-                            </div>
-
-                            <div class="row pt-3 pb-2 px-4 invisible">
-                                <div class="col-12 ">
-                                    <a href="chat.html" type="submit" role="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></a>
-                                </div>
                             </div>
                         </div>
                     </div>
