--- a/chat.html
+++ b/chat.html
@@ -1046,8 +1046,8 @@
                         </form>
                         <div class="row py-3">
                             <div class="col-12 d-flex justify-content-center">
-                                <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 px-5 mr-md-2 w-100" data-dismiss="modal"><strong>CANCEL</strong></button>
-                                <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white px-5 ml-2 w-100" data-dismiss="modal"><strong>UPLOAD</strong></button>
+                                <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 px-3 px-md-5 mr-md-2 w-100" data-dismiss="modal"><strong>CANCEL</strong></button>
+                                <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white px-3 px-md-5 ml-2 w-100" data-dismiss="modal"><strong>UPLOAD</strong></button>
                             </div>
                         </div>
                     </div>
