--- a/all_users.html
+++ b/all_users.html
@@ -34,17 +34,20 @@
                             <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around" id="nav_bar-d">
                                 <li class="nav-item ml-2">
                                     <a class="nav-link nav_link_active-d" href="all_users.html">
-                                        <img src="assets/images/home_icon.svg" class="img-fluid" alt="navbar_home" /> All Users
+                                        <img src="assets/images/player_icon.svg" width="30" class="img-fluid" alt="navbar_home" />
+                                        <span> All Users</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link nav_link_active-d" href="all_stadiums.html">
-                                        <img src="assets/images/chat_icon.svg" class="img-fluid" alt="navbar_chat" /> All Stadiums
+                                        <img src="assets/images/stadium_icon.svg" width="30" class="img-fluid" alt="navbar_chat" />
+                                        <span>All Stadiums</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link nav_link_active-d" href="javascript:void(0)">
-                                        <img src="assets/images/chat_icon.svg" class="img-fluid" alt="navbar_chat" /> All Payments
+                                        <img src="assets/images/payment_icon.svg" width="30" class="img-fluid pt-2" alt="navbar_chat" />
+                                        <span>All Payments</span>
                                     </a>
                                 </li>
                             </ul>
