complete admin-setting page

--- a/all_users.html
+++ b/all_users.html
@@ -34,20 +34,26 @@
                             <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around" id="nav_bar-d">
                                 <li class="nav-item ml-2">
                                     <a class="nav-link nav_link_active-d" href="all_users.html">
-                                        <img src="assets/images/player_icon.svg" width="30" class="img-fluid" alt="navbar_home" />
+                                        <img src="assets/images/player_icon.svg" width="30" class="img-fluid" alt="navbar_users" />
                                         <span> All Users</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link nav_link_active-d" href="all_stadiums.html">
-                                        <img src="assets/images/stadium_icon.svg" width="30" class="img-fluid" alt="navbar_chat" />
+                                        <img src="assets/images/stadium_icon.svg" width="30" class="img-fluid" alt="navbar_stadiums" />
                                         <span>All Stadiums</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link nav_link_active-d" href="javascript:void(0)">
-                                        <img src="assets/images/payment_icon.svg" width="30" class="img-fluid pt-2" alt="navbar_chat" />
+                                        <img src="assets/images/payment_icon.svg" width="30" class="img-fluid pt-2" alt="navbar_payments" />
                                         <span>All Payments</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link nav_link_active-d" href="admin_setting.html">
+                                        <img src="assets/images/moreoption.svg" width="25" class="img-fluid pt-1" alt="navbar_setting" />
+                                        <span>Setting</span>
                                     </a>
                                 </li>
                             </ul>
