--- a/admin_setting.html
+++ b/admin_setting.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="assets/css/main.css" />
 
-    <title>All Stadiums</title>
+    <title>Setting</title>
     <style></style>
 </head>
 
@@ -79,7 +79,7 @@
             <div class="row py-5 px-xl-5 justify-content-between">
                 <div class="col-md-5 col-12 align-self-center">
                     <h1 class="">
-                        <Strong>All Stadiums</Strong>
+                        <Strong>Setting</Strong>
                     </h1>
                 </div>
             </div>
@@ -89,62 +89,58 @@
         <!-- container for All Players - start -->
         <div class="container-fluid bg-white br_47px-s mh_69vh-s">
             <div class="row pt-5 px-xl-5">
-                <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
-                    <div class="card br_25px-s py-3 border-0 home_card mh_188px-s ">
-                        <div class="card-body py-4 text-white">
-                            <h5 class="card-title">Jaber Al-Ahmad International Stadium</h5>
-                            <h6>
-                                <i class="fa fa-map-marker mr-2" aria-hidden="true"></i>
-                                <span>Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
-                            </h6>
+                <div class="col-12 my-3">
+                    <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between">
+                        <div class="align-self-center">
+                            <h6 class="mb-0"><strong>Comment</strong></h6>
+                        </div>
+                        <div class="align-self-center d-flex">
+                            <div class="form-group mb-0">
+                                <input type="number" class="form-control border-0 rounded-0"  name='comment' id='number_box_3'  placeholder="300"/>
+                            </div>
+                            <button type="submit" class="btn bg_green-s text-white rounded-0">OK</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
-                    <div class="card br_25px-s py-3 border-0 home_card mh_188px-s ">
-                        <div class="card-body py-4 text-white">
-                            <h5 class="card-title">Jaber Al-Ahmad International Stadium</h5>
-                            <h6>
-                                <i class="fa fa-map-marker mr-2" aria-hidden="true"></i>
-                                <span>Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
-                            </h6>
+                <div class="col-12 my-3">
+                    <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between">
+                        <div class="align-self-center">
+                            <h6 class="mb-0"><strong>Comment</strong></h6>
+                        </div>
+                        <div class="align-self-center d-flex">
+                            <div class="form-group mb-0">
+                                <input type="number" class="form-control border-0 rounded-0"  name='comment' id='number_box_3'  placeholder="300"/>
+                            </div>
+                            <button type="submit" class="btn bg_green-s text-white rounded-0">OK</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
-                    <div class="card br_25px-s py-3 border-0 home_card mh_188px-s ">
-                        <div class="card-body py-4 text-white">
-                            <h5 class="card-title">Jaber Al-Ahmad International Stadium</h5>
-                            <h6>
-                                <i class="fa fa-map-marker mr-2" aria-hidden="true"></i>
-                                <span>Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
-                            </h6>
+                <div class="col-12 my-3">
+                    <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between">
+                        <div class="align-self-center">
+                            <h6 class="mb-0"><strong>Comment</strong></h6>
+                        </div>
+                        <div class="align-self-center d-flex">
+                            <div class="form-group mb-0">
+                                <input type="number" class="form-control border-0 rounded-0"  name='comment' id='number_box_3'  placeholder="300"/>
+                            </div>
+                            <button type="submit" class="btn bg_green-s text-white rounded-0">OK</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
-                    <div class="card br_25px-s py-3 border-0 home_card mh_188px-s ">
-                        <div class="card-body py-4 text-white">
-                            <h5 class="card-title">Jaber Al-Ahmad International Stadium</h5>
-                            <h6>
-                                <i class="fa fa-map-marker mr-2" aria-hidden="true"></i>
-                                <span>Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
-                            </h6>
+                <div class="col-12 my-3">
+                    <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between">
+                        <div class="align-self-center">
+                            <h6 class="mb-0"><strong>Comment</strong></h6>
+                        </div>
+                        <div class="align-self-center d-flex">
+                            <div class="form-group mb-0">
+                                <input type="number" class="form-control border-0 rounded-0"  name='comment' id='number_box_3'  placeholder="300"/>
+                            </div>
+                            <button type="submit" class="btn bg_green-s text-white rounded-0">OK</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
-                    <div class="card br_25px-s py-3 border-0 home_card mh_188px-s ">
-                        <div class="card-body py-4 text-white">
-                            <h5 class="card-title">Jaber Al-Ahmad International Stadium</h5>
-                            <h6>
-                                <i class="fa fa-map-marker mr-2" aria-hidden="true"></i>
-                                <span>Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
-                            </h6>
-                        </div>
-                    </div>
-                </div>
-                
             </div>
         </div>
         <!-- container for All Players - end -->
